// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CloseButton /> default matches with snapshot 1`] = `
.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  position: relative;
  box-sizing: border-box;
  font-family: Maax,Helvetica,Arial,sans-serif;
  font-weight: 500;
  font-size: 0.8888888888888888rem;
  color: #222;
  line-height: 1.3;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  cursor: pointer;
  min-width: 12.5rem;
  min-height: 3.125rem;
  padding: 0 1.875rem;
  font-size: 0.8888888888888888rem;
  border: 0.125rem solid #eee;
  background-color: #fff;
  color: #222;
  -webkit-transition: background-color 0.2s,color 0.2s,border-color 0.2s;
  transition: background-color 0.2s,color 0.2s,border-color 0.2s;
}

.c0:disabled {
  cursor: not-allowed;
}

.c0:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0 >:nth-child(n) {
  margin-right: 0.625rem;
  text-align: left;
}

.c0 >:last-child {
  margin-right: 0;
}

.c0.k-Button--hasBorderRadius {
  border-radius: var(--border-radius);
}

.c0.k-Button--nano {
  min-width: 6.25rem;
  min-height: 1.25rem;
  padding: 0 0.375rem;
  font-size: 0.7901234567901234rem;
}

.c0.k-Button--micro {
  min-width: 8.125rem;
  min-height: 1.875rem;
  padding: 0 0.625rem;
  font-size: 0.7901234567901234rem;
}

.c0.k-Button--tiny {
  min-width: 10rem;
  min-height: 2.5rem;
  padding: 0 1.25rem;
  font-size: 0.8888888888888888rem;
}

.c0.k-Button--huge {
  min-height: 4.375rem;
  font-size: 0.8888888888888888rem;
  padding: 0 0.625rem;
}

.c0.k-Button--giant {
  min-height: 4.375rem;
  font-size: 0.8888888888888888rem;
  padding: 0 0.625rem;
}

.c0.k-Button--hasIcon:not(.k-Button--fluid) {
  min-width: initial;
  min-height: initial;
  width: 3.125rem;
  height: 3.125rem;
  padding: 0;
}

.c0.k-Button--hasIcon:not(.k-Button--fluid).k-Button--nano {
  width: 1.25rem;
  height: 1.25rem;
}

.c0.k-Button--hasIcon:not(.k-Button--fluid).k-Button--micro {
  width: 1.875rem;
  height: 1.875rem;
}

.c0.k-Button--hasIcon:not(.k-Button--fluid).k-Button--tiny {
  width: 2.5rem;
  height: 2.5rem;
}

.c0.k-Button--hasIcon:not(.k-Button--fluid).k-Button--huge {
  min-width: initial;
  width: 4.375rem;
  height: 4.375rem;
}

.c0.k-Button--hasIcon:not(.k-Button--fluid).k-Button--giant {
  min-width: initial;
  width: 4.375rem;
  height: 4.375rem;
}

.c0.k-Button--fluid {
  min-width: initial;
  width: 100%;
}

.c0.k-Button--rounded {
  border-radius: 50%;
}

.c0.k-Button--orion {
  border-radius: 0.375rem;
}

.c0 svg,
.c0 path {
  fill: currentColor;
  -webkit-transition: fill 0.2s;
  transition: fill 0.2s;
}

.c0:hover,
.c0:focus {
  border-color: #05a8e6;
  background-color: #05a8e6;
  color: #fff;
}

.c0:active {
  border-color: #0496cc;
  background-color: #0496cc;
  color: #fff;
}

.c0:disabled {
  border-color: #d8d8d8;
  background-color: #d8d8d8;
  color: #fff;
}

@media screen and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .c0 {
    width: 12.5rem;
    height: 3.125rem;
  }
}

@media screen and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .c0.k-Button--nano {
    width: 6.25rem;
    height: 1.25rem;
  }
}

@media screen and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .c0.k-Button--micro {
    width: 6.25rem;
    height: 1.25rem;
  }
}

@media screen and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .c0.k-Button--tiny {
    width: 10rem;
    height: 2.5rem;
  }
}

@media (min-width:40rem) {
  .c0.k-Button--big {
    min-width: 13.75rem;
    min-height: 4.375rem;
    padding: 0 2.5rem;
    font-size: 1rem;
  }
}

@media screen and (min-width:40rem) and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .c0.k-Button--big {
    width: 13.75rem;
    height: 4.375rem;
  }
}

@media (min-width:768px) {
  .c0.k-Button--huge {
    min-width: 13.75rem;
    min-height: 5rem;
    font-size: 1rem;
    padding: 0 2.5rem;
  }
}

@media screen and (min-width:48rem) and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .c0.k-Button--huge {
    width: 13.75rem;
    height: 5rem;
  }
}

@media (min-width:768px) {
  .c0.k-Button--giant {
    min-width: 13.75rem;
    min-height: 5.625rem;
    font-size: 1rem;
    padding: 0 2.5rem;
  }
}

@media screen and (min-width:48rem) and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .c0.k-Button--giant {
    width: 13.75rem;
    height: 5.625rem;
  }
}

@media screen and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .c0.k-Button--hasIcon:not(.k-Button--fluid) {
    width: 3.125rem;
    min-width: 0;
    min-height: 0;
  }
}

@media screen and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .c0.k-Button--hasIcon:not(.k-Button--fluid).k-Button--nano {
    width: 1.25rem;
  }
}

@media screen and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .c0.k-Button--hasIcon:not(.k-Button--fluid).k-Button--micro {
    width: 1.875rem;
  }
}

@media screen and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .c0.k-Button--hasIcon:not(.k-Button--fluid).k-Button--tiny {
    width: 2.5rem;
  }
}

@media (min-width:40rem) {
  .c0.k-Button--hasIcon:not(.k-Button--fluid).k-Button--big {
    min-width: 0;
    min-height: 0;
    padding: 0;
    width: 4.375rem;
    height: 4.375rem;
  }
}

@media screen and (min-width:40rem) and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .c0.k-Button--hasIcon:not(.k-Button--fluid).k-Button--big {
    width: 4.375rem;
  }
}

@media (min-width:48rem) {
  .c0.k-Button--hasIcon:not(.k-Button--fluid).k-Button--huge {
    min-width: initial;
    width: 5rem;
    height: 5rem;
  }
}

@media screen and (min-width:48rem) and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .c0.k-Button--hasIcon:not(.k-Button--fluid).k-Button--huge {
    width: 5rem;
  }
}

@media (min-width:48rem) {
  .c0.k-Button--hasIcon:not(.k-Button--fluid).k-Button--giant {
    min-width: initial;
    width: 5.625rem;
    height: 5.625rem;
  }
}

@media screen and (min-width:48rem) and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .c0.k-Button--hasIcon:not(.k-Button--fluid).k-Button--giant {
    width: 5.625rem;
  }
}

@media (min-width:40rem) {
  .c0.k-Button--orion {
    min-width: 13.75rem;
    min-height: 4.375rem;
    padding: 0 2.5rem;
    font-size: 1rem;
  }
}

@media screen and (min-width:40rem) and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .c0.k-Button--orion {
    width: 13.75rem;
    height: 4.375rem;
  }
}

@media (min-width:40rem) {
  .c0.k-Button--orion {
    border-radius: 0.5rem;
  }
}

<button
  aria-label="Close"
  className="c0 k-Button k-Button--normal k-Button--hydrogen k-Button--andromeda k-Button--hasIcon"
  style={
    Object {
      "--border-radius": 0,
    }
  }
  title="Close"
  type="button"
>
  <svg
    fill="#222"
    height="8"
    viewBox="0 0 8 8"
    width="8"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M.464 6.12L6.12.465 7.537 1.88 1.88 7.535z"
    />
    <path
      d="M1.88.464L7.535 6.12 6.12 7.537.465 1.88z"
    />
  </svg>
</button>
`;

exports[`<CloseButton /> with props matches with snapshot 1`] = `
.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  position: relative;
  box-sizing: border-box;
  font-family: Maax,Helvetica,Arial,sans-serif;
  font-weight: 500;
  font-size: 0.8888888888888888rem;
  color: #222;
  line-height: 1.3;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  cursor: pointer;
  min-width: 12.5rem;
  min-height: 3.125rem;
  padding: 0 1.875rem;
  font-size: 0.8888888888888888rem;
  border: 0.125rem solid #eee;
  background-color: #fff;
  color: #222;
  -webkit-transition: background-color 0.2s,color 0.2s,border-color 0.2s;
  transition: background-color 0.2s,color 0.2s,border-color 0.2s;
}

.c0:disabled {
  cursor: not-allowed;
}

.c0:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0 >:nth-child(n) {
  margin-right: 0.625rem;
  text-align: left;
}

.c0 >:last-child {
  margin-right: 0;
}

.c0.k-Button--hasBorderRadius {
  border-radius: var(--border-radius);
}

.c0.k-Button--nano {
  min-width: 6.25rem;
  min-height: 1.25rem;
  padding: 0 0.375rem;
  font-size: 0.7901234567901234rem;
}

.c0.k-Button--micro {
  min-width: 8.125rem;
  min-height: 1.875rem;
  padding: 0 0.625rem;
  font-size: 0.7901234567901234rem;
}

.c0.k-Button--tiny {
  min-width: 10rem;
  min-height: 2.5rem;
  padding: 0 1.25rem;
  font-size: 0.8888888888888888rem;
}

.c0.k-Button--huge {
  min-height: 4.375rem;
  font-size: 0.8888888888888888rem;
  padding: 0 0.625rem;
}

.c0.k-Button--giant {
  min-height: 4.375rem;
  font-size: 0.8888888888888888rem;
  padding: 0 0.625rem;
}

.c0.k-Button--hasIcon:not(.k-Button--fluid) {
  min-width: initial;
  min-height: initial;
  width: 3.125rem;
  height: 3.125rem;
  padding: 0;
}

.c0.k-Button--hasIcon:not(.k-Button--fluid).k-Button--nano {
  width: 1.25rem;
  height: 1.25rem;
}

.c0.k-Button--hasIcon:not(.k-Button--fluid).k-Button--micro {
  width: 1.875rem;
  height: 1.875rem;
}

.c0.k-Button--hasIcon:not(.k-Button--fluid).k-Button--tiny {
  width: 2.5rem;
  height: 2.5rem;
}

.c0.k-Button--hasIcon:not(.k-Button--fluid).k-Button--huge {
  min-width: initial;
  width: 4.375rem;
  height: 4.375rem;
}

.c0.k-Button--hasIcon:not(.k-Button--fluid).k-Button--giant {
  min-width: initial;
  width: 4.375rem;
  height: 4.375rem;
}

.c0.k-Button--fluid {
  min-width: initial;
  width: 100%;
}

.c0.k-Button--rounded {
  border-radius: 50%;
}

.c0.k-Button--orion {
  border-radius: 0.375rem;
}

.c0 svg,
.c0 path {
  fill: currentColor;
  -webkit-transition: fill 0.2s;
  transition: fill 0.2s;
}

.c0:hover,
.c0:focus {
  border-color: #05a8e6;
  background-color: #05a8e6;
  color: #fff;
}

.c0:active {
  border-color: #0496cc;
  background-color: #0496cc;
  color: #fff;
}

.c0:disabled {
  border-color: #d8d8d8;
  background-color: #d8d8d8;
  color: #fff;
}

@media screen and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .c0 {
    width: 12.5rem;
    height: 3.125rem;
  }
}

@media screen and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .c0.k-Button--nano {
    width: 6.25rem;
    height: 1.25rem;
  }
}

@media screen and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .c0.k-Button--micro {
    width: 6.25rem;
    height: 1.25rem;
  }
}

@media screen and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .c0.k-Button--tiny {
    width: 10rem;
    height: 2.5rem;
  }
}

@media (min-width:40rem) {
  .c0.k-Button--big {
    min-width: 13.75rem;
    min-height: 4.375rem;
    padding: 0 2.5rem;
    font-size: 1rem;
  }
}

@media screen and (min-width:40rem) and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .c0.k-Button--big {
    width: 13.75rem;
    height: 4.375rem;
  }
}

@media (min-width:768px) {
  .c0.k-Button--huge {
    min-width: 13.75rem;
    min-height: 5rem;
    font-size: 1rem;
    padding: 0 2.5rem;
  }
}

@media screen and (min-width:48rem) and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .c0.k-Button--huge {
    width: 13.75rem;
    height: 5rem;
  }
}

@media (min-width:768px) {
  .c0.k-Button--giant {
    min-width: 13.75rem;
    min-height: 5.625rem;
    font-size: 1rem;
    padding: 0 2.5rem;
  }
}

@media screen and (min-width:48rem) and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .c0.k-Button--giant {
    width: 13.75rem;
    height: 5.625rem;
  }
}

@media screen and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .c0.k-Button--hasIcon:not(.k-Button--fluid) {
    width: 3.125rem;
    min-width: 0;
    min-height: 0;
  }
}

@media screen and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .c0.k-Button--hasIcon:not(.k-Button--fluid).k-Button--nano {
    width: 1.25rem;
  }
}

@media screen and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .c0.k-Button--hasIcon:not(.k-Button--fluid).k-Button--micro {
    width: 1.875rem;
  }
}

@media screen and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .c0.k-Button--hasIcon:not(.k-Button--fluid).k-Button--tiny {
    width: 2.5rem;
  }
}

@media (min-width:40rem) {
  .c0.k-Button--hasIcon:not(.k-Button--fluid).k-Button--big {
    min-width: 0;
    min-height: 0;
    padding: 0;
    width: 4.375rem;
    height: 4.375rem;
  }
}

@media screen and (min-width:40rem) and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .c0.k-Button--hasIcon:not(.k-Button--fluid).k-Button--big {
    width: 4.375rem;
  }
}

@media (min-width:48rem) {
  .c0.k-Button--hasIcon:not(.k-Button--fluid).k-Button--huge {
    min-width: initial;
    width: 5rem;
    height: 5rem;
  }
}

@media screen and (min-width:48rem) and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .c0.k-Button--hasIcon:not(.k-Button--fluid).k-Button--huge {
    width: 5rem;
  }
}

@media (min-width:48rem) {
  .c0.k-Button--hasIcon:not(.k-Button--fluid).k-Button--giant {
    min-width: initial;
    width: 5.625rem;
    height: 5.625rem;
  }
}

@media screen and (min-width:48rem) and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .c0.k-Button--hasIcon:not(.k-Button--fluid).k-Button--giant {
    width: 5.625rem;
  }
}

@media (min-width:40rem) {
  .c0.k-Button--orion {
    min-width: 13.75rem;
    min-height: 4.375rem;
    padding: 0 2.5rem;
    font-size: 1rem;
  }
}

@media screen and (min-width:40rem) and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .c0.k-Button--orion {
    width: 13.75rem;
    height: 4.375rem;
  }
}

@media (min-width:40rem) {
  .c0.k-Button--orion {
    border-radius: 0.5rem;
  }
}

<button
  aria-label="close"
  className="c0 k-Button k-Button--tiny k-Button--hydrogen k-Button--andromeda k-Button--hasIcon"
  style={
    Object {
      "--border-radius": 0,
    }
  }
  title="Close"
  type="button"
>
  <svg
    fill="#222"
    height="8"
    viewBox="0 0 8 8"
    width="8"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M.464 6.12L6.12.465 7.537 1.88 1.88 7.535z"
    />
    <path
      d="M1.88.464L7.535 6.12 6.12 7.537.465 1.88z"
    />
  </svg>
</button>
`;
